# fragnnet

./: .gitignore  INSTALL.md  LICENSE  README.md  install_lib.py  pyproject.toml  setup.py
config/: README.md  template.yml
config/ablations/fraggnn_d3_edges/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/ablations/fraggnn_d3_noce/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/ablations/fraggnn_d4_noce/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/entropy/: d4_baseline.yml  d4_script_config.yml
config/entropy/d4_baseline_ens/: s00.yml  s01.yml  s02.yml  s03.yml  s04.yml  s05.yml  s06.yml  s07.yml  s08.yml  s09.yml  s10.yml  s11.yml  s12.yml  s13.yml  s14.yml
config/entropy/d4_high_ens/: s00.yml  s01.yml  s02.yml  s03.yml  s04.yml  s05.yml  s06.yml  s07.yml  s08.yml  s09.yml  s10.yml  s11.yml  s12.yml  s13.yml  s14.yml
config/entropy/d4_low_ens/: s00.yml  s01.yml  s02.yml  s03.yml  s04.yml  s05.yml  s06.yml  s07.yml  s08.yml  s09.yml  s10.yml  s11.yml  s12.yml  s13.yml  s14.yml
config/nist20_inchikey/fragnnet_d3/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_inchikey/fragnnet_d4/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_inchikey/graff/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_inchikey/iceberg_gen/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_inchikey/iceberg_inten/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_inchikey/iceberg_inten_opt/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_inchikey/massformer/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_inchikey/neims/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_inchikey/precursor/: s0.yml
config/nist20_scaffold/fragnnet_d3/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_scaffold/fragnnet_d4/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_scaffold/graff/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_scaffold/iceberg_gen/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_scaffold/iceberg_inten/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_scaffold/iceberg_inten_opt/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_scaffold/massformer/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_scaffold/neims/: s0.yml  s1.yml  s2.yml  s3.yml  s4.yml
config/nist20_scaffold/precursor/: s0.yml
config/spectraverse/fragnnet/: cv0.yml  cv1.yml  cv10.yml  cv2.yml  cv3.yml  cv4.yml  cv5.yml  cv6.yml  cv7.yml  cv8.yml  cv9.yml
config/sweeps/: d3_sweep_template.yml  d4_sweep_template.yml  graff_sweep_template.yml  iceberg_gen_sweep_template.yml  iceberg_inten_100_sweep_template.yml  iceberg_inten_all_sweep_template.yml  massformer_sweep_template.yml  neims_sweep_template.yml
env/: env_setup_gpu_current.sh
figs/ablation_exp/: test_df.csv
figs/c2ms_sim_exp/: os_df.tex  test_df.csv  test_df.tex
figs/formula_ann_exp/: formula_stats_df.tex
figs/frag_ann_exp/: ensemble_agreement_stats_c.pkl  ensemble_agreement_stats_nb_c.pkl  ensemble_stats.pkl
figs/frag_stats/: d3-bi.csv  d3.csv  d4-bi.csv  d4.csv
notebooks/: README.md  ablation_exp.ipynb  c2ms_sim_exp.ipynb  formula_ann_exp.ipynb  frag_ann_exp.ipynb  frag_stats.ipynb  ms2c_retrieval_exp.ipynb  param_counts.ipynb
preproc_scripts/: 01_prepare_df.py  02_prepare_proc.py  03_prepare_dag_feats.py  04_prepare_split.py  05_prepare_magma_feats.py  06_predict_magma_dags.py  README.md
preproc_scripts/inference/: 01_inf_prepare_mol_df.py  02_inf_prepare_spec_df.py  03_inf_run_inference_frag_gen.py
preproc_scripts/ms2c_inference/: 01_ms2c_inf_create_candidate_df.py  02_ms2c_inf_candidate_to_proc.py  README.md
preproc_scripts/pubchem_ms2c/: 01_prepare_pubchem.py  02_prepare_ms2c_candidates.py  03_perpare_ms2c_mol_and_spec_df.py  04_run_ms2c_frag_gen.py
preproc_scripts/spectraverse/: prepare_spectraverse_candidates_frags.py  split_by_adduct.py
scripts/: README.md  calculate_ablation_stats.py  calculate_ensemble_agreement_stats.py  calculate_ensemble_stats.py  calculate_formula_stats.py  calculate_similarity_stats.py  run_compute_frags.py  run_pl_model_fit.py  run_save_entropy.py  run_save_inference.py  run_save_inference_ablations.py  run_wandb_sweep.py
scripts/ms2c/: create_ranking_only_pkl.py  download_ckpts.py  eval_pubchem_retrieval_baseline_ncdg.py  eval_pubchem_retrieval_val.py  run_iceberg_ms2c_predict_val.py  run_ms2c_predict_val.py  setup_ms2c_scripts.py
src/fragnnet/: __init__.py  dataset.py  form_embedder.py  loss.py  model.py  pl_model.py  runner.py
sweep/: README.md  fragnnet_d3_sweep.yml  fragnnet_d4_sweep.yml  graff_sweep.yml  iceberg_gen_sweep.yml  iceberg_inten_opt_sweep.yml  iceberg_inten_sweep.yml  massformer_sweep.yml  neims_sweep.yml
tests/: README.md  bench_multi_cut_bfs.py  conftest.py  test_01_inf_prepare_mol_df.py  test_01_prepare_df.py  test_02_inf_prepare_spec_df.py  test_02_prepare_proc.py  test_03_inf_run_inference_frag_gen.py  test_03_prepare_dag_feats.py  test_adduct_inst_sampler.py  test_base_dataset_subsample.py  test_boundary_cc.py  test_boundary_pair.py  test_cc_feature_dropout.py  test_ce_scaler.py  test_charged_frag_utils.py  test_cmf_logic.py  test_compute_frags.py  test_cross_ce_consistency.py  test_cython_smarts_prepass.py  test_data_sampler.py  test_data_utils.py  test_debug_compare_mbfs_dags.py  test_feat_utils.py  test_form_embedder.py  test_formula_utils.py  test_frag_mode_model.py  test_frag_utils_compute_dags.py  test_frag_utils_pickle_io.py  test_h_shift_trim.py  test_hdf5_dag_storage.py  test_inference_integration.py  test_isotope_detection.py  test_iterable_spec_mol_frag_dataset.py  test_linear_sum_assignment.py  test_loss.py  test_loss_cumsum_bincount.py  test_loss_sync_removal.py  test_mces_dataset.py  test_mces_pretrain.py  (+22 more)
(+157 files in other folders)
