[build-system]
requires = ["setuptools", "wheel", "cython==3.0.12", "numpy>=1.24,<2"]
build-backend = "setuptools.build_meta"

[project]
name = "fragnnet"
version = "2026.06.0"
description = "MS/MS prediction for small molecules"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10, <=3.13"

dependencies = [
    "numpy>=1.24,<2",
    "cython==3.0.12",
    "pandas==2.2.3",
    "rdkit>=2022.09.4, <=2023.09.5",
    "tqdm",
    "scipy==1.15.2",
    "scikit-learn",
    "joblib>=1.3.2",
    "torch==2.4.1",
    "lightning==2.4.0",
    "dgl==1.0.4",
    "torch_geometric==2.6.1",
    "torch_scatter==2.1.2",
    "matplotlib",
    "pyteomics",
    "omegaconf",
    "h5py",
    "lmdb==1.7.5",
    "pandarallel",
    "pyopenms",
]

[project.optional-dependencies]
# development dependency groups
dev = [
    "wandb",
    "notebook",
    "ipywidgets",
    "CairoSVG",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "isort>=5.12"
]

speed = [
    "torch-linear-assignment"
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.package-data]
fragnnet = ["*.pyx", "*.pxd", "*.c", "*.h"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    "wandb",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "NPY",    # NumPy-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict parameter
    "C901",   # too complex
    "ARG002", # unused method argument
    "ARG001", # unused function argument
    "SIM108", # use ternary operator instead of if-else
    "COM812",  # missing-trailing-comma
    "CPY001",  # Missing copyright notice at top of file
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D203",    # blank line required before class docstring
    "D211",    # no-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "EM101",   # raw-string-in-exception
    "FIX002",  # line-contains-todo
    "ISC001",  # Conflicts with formatter ruff
    "PLR0904", # Too many public methods (... > 20)
    "TD002",   # Missing author in TODO `# TODO(<author_name>): ...`
    "TD003",   # missing-todo-link
    "TRY003",  # raise-vanilla-args
]
fixable = ["ALL"]
unfixable = [
    "D",  # Don't fix docstyle from others
    "I",  # we run isort separately
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["ARG", "B"]  # allow unused args and other patterns in tests
"test_*.py" = [
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
]
"preproc_scripts/**/*.py" = ["B", "SIM"]  # more lenient for scripts
"scripts/**/*.py" = ["B", "SIM"]
"*.ipynb" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["fragnnet"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.10"
# Reduce noise from third-party libraries without stubs during
# early development. These settings can be tightened progressively.
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false
no_implicit_optional = false
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
strict_equality = false

[tool.black]
line-length = 100
target-version = ['py310','py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

#[tool.hatch.version]
#path = "src/fragnnet/__init__.py"